--- a/med-reminder-UI/src/app/navbar/navbar.component.html
+++ b/med-reminder-UI/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
                   <a class="nav-link" href="javascript:void(0)">Link</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Link</a>
+                  <a class="nav-link" (click)="onLogOut()">Log Out</a>
                 </li>
               </ul>
         </div>
